# spo

./: .gitignore  CMakeLists.txt  Makefile  asm_generator.c  asm_generator.h  ast.c  ast.h  builtin_functions.c  builtin_functions.h  cfg.c  cfg.h  error.c  error.h  input.txt  input2.txt  lex.yy.c  lexer.l  main.c  main.h  model.lex  parser.tab.c  parser.tab.h  parser.y  preprocess_ast.c  preprocess_ast.h  semantic_analyser.c  semantic_analyser.h  spo.asm  symbolic_table.c  symbolic_table.h  symbolic_table_asm.c  symbolic_table_asm.h
arch/: .env.example  spo.target.pdsl
programs/: calculator.spo
